stratosource/sfdiff/testfiles/ltest/unpackaged/objects/APPR_DGRP__Group_Rule__c.object
<CustomObject>
    <description>Stores a rule or condition associated with a given dynamic group</description>
    <fields>
        <fullName>APPR_DGRP__Dynamic_Group__c</fullName>
        <description>The referenced parent dynamic group</description>
        <label>Dynamic Group</label>
        <referenceTo>APPR_DGRP__Dynamic_Group__c</referenceTo>
        <relationshipLabel>Group Rules</relationshipLabel>
        <relationshipName>Group_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APPR_DGRP__Operator__c</fullName>
        <description>The operator used to construct the rule/ condition</description>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>not equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APPR_DGRP__Record_Field__c</fullName>
        <description>The field name being used by the rule/ condition</description>
        <label>Record Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPR_DGRP__Value__c</fullName>
        <description>The value used to constrain the rule/ condition.</description>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Group Rule</label>
    <nameField>
        <displayFormat>GR-{0000}</displayFormat>
        <label>Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>